# Cramer

./: .gitignore  README.md  pyproject.toml  secret.txt
.github/workflows/: python-package.yml
cramer/: __init__.py  coal.py  main.py  print.py
tests/: test_basic.py
